RTC5impl.hpp


_declspec(dllimport) void __stdcall n_set_sky_writing_para_list(const UINT CardNo, const double Timelag, const long LaserOnShift, const UINT Nprev, const UINT Npost);

_declspec(dllimport) void __stdcall n_set_sky_writing_list(const UINT CardNo, const double Timelag, const long LaserOnShift);

_declspec(dllimport) void __stdcall n_set_scanner_delays(const UINT CardNo, const UINT Jump, const UINT Mark, const UINT Polygon);

_declspec(dllimport) void __stdcall n_set_jump_tuning_list(const UINT CardNo, const long Flag);

_declspec(dllimport) void __stdcall set_mark_speed(const double Speed);

_declspec(dllimport) void __stdcall set_jump_speed(const double Speed);

_declspec(dllimport) void __stdcall set_sky_writing_para_list(const double Timelag, const long LaserOnShift, const UINT Nprev, const UINT Npost);

_declspec(dllimport) void __stdcall set_sky_writing_list(const double Timelag, const long LaserOnShift);

_declspec(dllimport) void __stdcall set_scanner_delays(const UINT Jump, const UINT Mark, const UINT Polygon);

_declspec(dllimport) void __stdcall set_jump_tuning_list(const long Flag);