RTC5Import.pas

procedure n_set_sky_writing_para_list(CardNo: LongWord; Timelag: Double; LaserOnShift: LongInt; Nprev: LongWord; Npost: LongWord); stdcall; external RTC5DLL;
procedure n_set_sky_writing_list(CardNo: LongWord; Timelag: Double; LaserOnShift: LongInt); stdcall; external RTC5DLL;
procedure n_set_scanner_delays(CardNo: LongWord; Jump: LongWord; Mark: LongWord; Polygon: LongWord); stdcall; external RTC5DLL;
procedure n_set_jump_tuning_list(CardNo: LongWord; Flag: LongInt); stdcall; external RTC5DLL;
procedure set_mark_speed(Speed: Double); stdcall; external RTC5DLL;
procedure set_jump_speed(Speed: Double); stdcall; external RTC5DLL;
procedure set_sky_writing_para_list(Timelag: Double; LaserOnShift: LongInt; Nprev: LongWord; Npost: LongWord); stdcall; external RTC5DLL;
procedure set_sky_writing_list(Timelag: Double; LaserOnShift: LongInt); stdcall; external RTC5DLL;
procedure set_scanner_delays(Jump: LongWord; Mark: LongWord; Polygon: LongWord); stdcall; external RTC5DLL;
procedure set_jump_tuning_list(Flag: LongInt); stdcall; external RTC5DLL;

implementation

end.
